# hebrewcal

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  examples.md  index.md  installation.md  quickstart.md  testing.md
docs/guide/: alternative-calendars.md  anno-mundi.md  astronomy.md  calendars.md  cli.md  formatting.md  hebrew-internals.md  holidays.md  index.md  names.md  numerals.md  parsing.md  rata-die.md  religious-times.md
docs/specs/: 2026-06-03-architecture-roadmap.md  2026-06-05-phase-1-implementation-plan.md  2026-06-07-phase-2-implementation-plan.md  2026-06-07-phase-3-implementation-plan.md  2026-06-09-phase-4-implementation-plan.md  2026-06-09-phase-5-implementation-plan.md
src/hebrewcal/: __init__.py  __main__.py  cli.py  conversion.py  names.py  numerals.py
src/hebrewcal/astro/: __init__.py  location.py  lunar.py  molad.py  solar.py  timekeeping.py  timezone.py
src/hebrewcal/calendars/: __init__.py  gregorian.py  hebrew.py  julian.py
src/hebrewcal/calendars_alt/: __init__.py  _meanlunar.py  karaite.py  qumran.py  samaritan.py
src/hebrewcal/core/: __init__.py  calendar.py  rata_die.py
src/hebrewcal/eras/: __init__.py  anno_mundi.py
src/hebrewcal/formatting/: __init__.py  dates.py
src/hebrewcal/hebrew/: __init__.py  dechiyot.py  keviah.py  metonic.py  molad.py  yeartype.py
src/hebrewcal/parsing/: __init__.py  dates.py
src/hebrewcal/religious/: __init__.py  announce.py  holidays.py  omer.py  sabbatical.py  shabbat.py  torah.py  yahrzeit.py  zmanim.py
tests/: test_cli.py  test_conversion.py  test_hebrew_script.py  test_metadata.py  test_names.py  test_numerals.py  test_public_api.py  test_reference_dates.py
tests/astro/: test_elevation.py  test_location.py  test_lunar.py  test_molad_moment.py  test_reference_sun.py  test_solar_events.py  test_solar_terms.py  test_timekeeping.py  test_timezone.py  test_twilight.py
tests/calendars/: test_gregorian.py  test_hebrew.py  test_julian.py
tests/calendars_alt/: test_alt_reference.py  test_karaite.py  test_qumran.py  test_samaritan.py
tests/core/: test_calendar.py  test_rata_die.py
tests/eras/: test_anno_mundi.py
tests/formatting/: test_dates.py
tests/hebrew/: test_dechiyot.py  test_keviah.py  test_metonic.py  test_molad.py  test_performance.py  test_yeartype.py
tests/parsing/: test_dates.py
tests/religious/: test_announce.py  test_engine.py  test_fasts.py  test_major.py  test_minor.py  test_minority.py  test_modern.py  test_omer.py  test_reference_holidays.py  test_reference_times.py  test_sabbatical.py  test_shabbat.py  test_special_shabbatot.py  test_torah.py  test_yahrzeit.py  test_yahrzeit_conventions.py  test_zmanim.py  test_zmanim_opinions.py
