[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hebrewcal"
version = "0.1.1"
description = "A pure-Python library for the Hebrew calendar: conversion, astronomy, holidays and religious times, computed entirely locally."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Benjamin Schnabel", email = "Benjamin-777@gmx.de" }]
keywords = [
    "hebrew",
    "calendar",
    "jewish",
    "zmanim",
    "molad",
    "gregorian",
    "julian",
    "calendrical",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Religion",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Religion",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# No runtime dependencies: everything is computed locally using the standard library only.
dependencies = []

[project.urls]
Homepage = "https://github.com/bsesic/hebrewcal"
Repository = "https://github.com/bsesic/hebrewcal"
Documentation = "https://hebrewcal.readthedocs.io"
Issues = "https://github.com/bsesic/hebrewcal/issues"
Changelog = "https://github.com/bsesic/hebrewcal/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "flake8>=7.0",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
    "myst-parser>=3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hebrewcal = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["hebrewcal"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# This library deliberately embeds Hebrew text in strings, comments and
# docstrings. The ambiguous-unicode checks (homoglyph detection for Latin code)
# are false positives in that context, so they are disabled project-wide.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["hebrewcal"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["src", "tests"]
